--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Postdoctoral Researcher</h1>
+    <h1>Taillte May</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="research.html">Research Interests</a></li>
-        <li><a href="cv.pdf" target="_blank">CV</a></li>
+        <li><a href="CV.pdf" target="_blank">CV</a></li>
       </ul>
     </nav>
   </header>
