another style update

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
   <main>
     <div class="profile">
-      <img src="photo.jpg" alt="Taillte May" class="profile-photo">
+      <img src="photo.jpg" alt="Taillte May" class="profile-photo" />
       <div class="profile-text">
-        <p>Taillte May is a postdoctoral researcher at Tecnico in Lisbon. She received her PhD in 2025 at the Perimeter Institute for Theoretical Physics in Canada. Her main interests are in using black holes and gravitational waves to test fundamental physics.</p>
+        <p>
+          Taillte May is a postdoctoral researcher at Tecnico in Lisbon. She received her PhD in 2025 at the Perimeter Institute for Theoretical Physics in Canada. Her main interests are in using black holes and gravitational waves to test fundamental physics.
+        </p>
       </div>
     </div>
   </main>
 </body>
 </html>
-
