--- a/index.html
+++ b/index.html
@@ -1,33 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Taillte May</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>Taillte May</h1>
-    <h2>Postdoctoral Researcher</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="research.html">Research Interests</a></li>
-        <li><a href="CV.pdf" target="_blank">CV</a></li>
-      </ul>
-    </nav>
-  </header>
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Hyperspace by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-  <main>
-    <div class="profile">
-      <img src="photo.jpg" alt="Taillte May" class="profile-photo" />
-      <div class="profile-text">
-        <p>
-          Taillte May is a postdoctoral researcher at Tecnico in Lisbon. She received her PhD in 2025 at the Perimeter Institute for Theoretical Physics in Canada. Her main interests are in using black holes and gravitational waves to test fundamental physics.
-        </p>
-      </div>
-    </div>
-  </main>
-</body>
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Introduction</a></li>
+							<li><a href="#one">Research Interests</a></li>
+							<li><a href="#two">Links</a></li>
+							<li><a href="#three">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Taillte May</h1>
+							<p>Taillte is a postdoctoral researcher at Instituto Superior Técnico in Lisbon, working on the physics of black holes and gravitational waves.</p>
+						</div>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Black hole Nonlinearities</h2>
+									<p>General Relativity is a nonlinear theory and we expect to see nonlinear effects when gravitational curvature is at its strongest -- in the vicinity of black holes.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Black Hole Superradiance</h2>
+									<p>Ultralight bosons can by amplified by scattering off black holes. This phenomena allows us to constrain the existence of these particles.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Tests of Consistency with Black Holes of General Relativity</h2>
+									<p>Gravitational waves allow us to probe the physics of regions where gravitational curvature is at its strongest. These signals may give us the first clues as to deviations between gravity in our universe and Einstein's General Relativity.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- Two  maybe rewrite to look like the last section but with photos on the opposite side?-->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Links</h2>
+							<p>Below are relevant links to talks and publication details.</p>
+							<div class="features">
+								<section>
+									<!--<span class="icon solid major fa-code"></span>-->
+									<h3>Curriculim Vitae</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<!--<span class="icon solid major fa-lock"></span>-->
+									<h3>Paper summaries</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<!--<span class="icon solid major fa-cog"></span>-->
+									<h3>Talks</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Contact</h2>
+							<a href="#">tmay@perimeterinstitute.ca</a>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Taillte May</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
