added photo to intro

--- a/index.html
+++ b/index.html
@@ -32,11 +32,25 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<!--<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Taillte May</h1>
 							<p>Taillte is a postdoctoral researcher at Instituto Superior Técnico in Lisbon, working on the physics of black holes and gravitational waves.</p>
 						</div>
+					</section>-->
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						 <div class="inner intro-content">
+    						 	<div class="intro-photo">
+      								<img src="images/portrait.jpg" alt="Taillte May" />
+    							</div>
+    							<div class="intro-text">
+      								<h1>Taillte May</h1>
+      								<p>
+        								Taillte is a postdoctoral researcher at Instituto Superior Técnico in Lisbon, working on the physics of black holes and gravitational waves.
+      								</p>
+    							</div>
+  						</div>
 					</section>
 
 				<!-- One -->
