trying to move photo again

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       								<img src="images/portrait.jpg" alt="Taillte May" />
     							</div>
     							<div class="intro-text">
+								<h1>Note: this page is under construction</h1>
       								<h1>Taillte May</h1>
       								<p>
         								Taillte is a postdoctoral researcher at Instituto Superior Técnico in Lisbon, working on the physics of black holes and gravitational waves.
