updated email link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       								<img src="images/portrait.jpg" alt="Taillte May" />
     							</div>
     							<div class="intro-text">
-								<h1>Note: this page is under construction</h1>
       								<h1>Taillte May</h1>
       								<p>
         								Taillte is a postdoctoral researcher at Instituto Superior Técnico in Lisbon, working on the physics of black holes and gravitational waves.
@@ -113,7 +112,9 @@
 								<section>
 									<!--<span class="icon solid major fa-cog"></span>-->
 									<h3>Talks</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Black hole ringdown nonlinearities</p>
+									<p>Perimeter Institute, 21st Oct 2024</p>
+									<p><a href="https://pirsa.org/24100138">Click here</a></p>
 								</section>
 							</div>
 						</div>
@@ -123,7 +124,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
-							<a href="#">tmay@perimeterinstitute.ca</a>
+							<a href="mailto:tmay@perimeterinstitute.ca">tmay@perimeterinstitute.ca</a>
 						</div>
 					</section>
 
