added links and cv

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Tests of Consistency with Black Holes of General Relativity</h2>
-									<p>Gravitational waves allow us to probe the physics of regions where gravitational curvature is at its strongest. These signals may give us the first clues as to deviations between gravity in our universe and Einstein's General Relativity.</p>
+									<h2>Gravitational Wave Tests of General Relativity</h2>
+									<p>Gravitational waves allow us to probe the physics of regions where gravitational curvature is at its strongest. These signals may give us the first clues as to deviations between gravity or black holes in our universe and those of Einstein's General Relativity.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -102,19 +102,17 @@
 								<section>
 									<!--<span class="icon solid major fa-code"></span>-->
 									<h3>Curriculim Vitae</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p><a href="CV.pdf" target="_blank">Click here</a></li>, last updated 18th Oct 2025</p>
 								</section>
 								<section>
 									<!--<span class="icon solid major fa-lock"></span>-->
-									<h3>Paper summaries</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Paper Summaries</h3>
+									<p><a href="https://inspirehep.net/authors/2626634?ui-citation-summary=true">Inspire</a>, <a href="https://arxiv.org/search/gr-qc?searchtype=author&query=May,+T">Arxiv</a>, <a href="https://orcid.org/0000-0002-4237-3134">Orcid</a></p>
 								</section>
 								<section>
 									<!--<span class="icon solid major fa-cog"></span>-->
 									<h3>Talks</h3>
-									<p>Black hole ringdown nonlinearities</p>
-									<p>Perimeter Institute, 21st Oct 2024</p>
-									<p><a href="https://pirsa.org/24100138">Click here</a></p>
+									<p><a href="https://pirsa.org/24100138">Black Hole Ringdown Nonlinearities</a>, Perimeter Institute, 21st Oct 2024</p>
 								</section>
 							</div>
 						</div>
