fixed broken links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<h2>Black hole Nonlinearities</h2>
 									<p>General Relativity is a nonlinear theory and we expect to see nonlinear effects when gravitational curvature is at its strongest -- in the vicinity of black holes.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="nonlinearities.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,7 +74,7 @@
 									<h2>Black Hole Superradiance</h2>
 									<p>Ultralight bosons can by amplified by scattering off black holes. This phenomena allows us to constrain the existence of these particles.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="superradiance.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 									<h2>Gravitational Wave Tests of General Relativity</h2>
 									<p>Gravitational waves allow us to probe the physics of regions where gravitational curvature is at its strongest. These signals may give us the first clues as to deviations between gravity or black holes in our universe and those of Einstein's General Relativity.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="testgr.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
