--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<h2>Gravitational Wave Tests of General Relativity</h2>
 									<p>Gravitational waves allow us to probe the physics of regions where gravitational curvature is at its strongest. These signals may give us the first clues as to deviations between gravity or black holes in our universe and those of Einstein's General Relativity.</p>
 									<ul class="actions">
-										<li><a href="testgr.html" class="button">Learn more</a></li>
+										<li><a href="testsgr.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
