added nonlinearities section

--- a/nonlinearities.html
+++ b/nonlinearities.html
@@ -34,9 +34,17 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Black Hole Nonlinearities</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<span class="image fit"><img src="images/guitar.jpg" alt="" /></span>
+							<p>Each string on a guitar has a set of characteristic resonant frequencies called normal modes. Those frequencies are labelled by a mode number, here 'n'.</p>
+							<p>Black holes also have a set of characteristic frequencies, called quasinormal modes. They are quasinormal as opposed to normal because they have a characteristic decay time as well as a characteristic real frequency.</p>
+							<span class="image fit"><img src="images/qnm.jpg" alt="" /></span>
+                                                        <p>Those quasinormal modes are solutions linearised gravitational perturbation on a black hole background. So these frequencies will completely describe a very small amount of gravitational waves coming from a perturbed black hole.</p>
+							<p>These modes are an exact solution only in the limit where the perturbation is very small. They are accurate to linear order in the size of the perturbation, and the physical solution will include other contributions.</p>
+							<span class="image fit"><img src="images/gw_ringdown.jpg" alt="" /></span>
+                                                        <p>So for a gravitational wave signal from merging binary black holes, the very end part of the signal where the remnant black hole relaxes into stationarity should be well described by these quasinormal modes. </p>
+							<p>The problem is that the power in the gravitational wave signal decreases as the signal becomes more confidently linear. We would like to be able to analytically model earlier parts of the signal, or at least to understand how accurate a linear model is at those times. For this reason, we study the nonlinear components of the signal.</p>
+							<span class="image fit"><img src="images/qnm_nonlinear.jpg" alt="" /></span>
+                                                        <p>Those other contributions are at higher order in the size or amplitude of the perturbation, and can be studied using analytic perturbation theory as well as numerical methods.</p>
 						</div>
 					</section>
 
