--- a/nonlinearities.html
+++ b/nonlinearities.html
@@ -40,7 +40,7 @@
 							<span class="image fit"><img src="images/qnm.jpg" alt="" /></span>
                                                         <p>Those quasinormal modes are solutions linearised gravitational perturbation on a black hole background. So these frequencies will completely describe a very small amount of gravitational waves coming from a perturbed black hole.</p>
 							<p>These modes are an exact solution only in the limit where the perturbation is very small. They are accurate to linear order in the size of the perturbation, and the physical solution will include other contributions.</p>
-							<span class="image fit"><img src="images/gw_ringdown.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/gw_ringdown.png" alt="" /></span>
                                                         <p>So for a gravitational wave signal from merging binary black holes, the very end part of the signal where the remnant black hole relaxes into stationarity should be well described by these quasinormal modes. </p>
 							<p>The problem is that the power in the gravitational wave signal decreases as the signal becomes more confidently linear. We would like to be able to analytically model earlier parts of the signal, or at least to understand how accurate a linear model is at those times. For this reason, we study the nonlinear components of the signal.</p>
 							<span class="image fit"><img src="images/qnm_nonlinear.jpg" alt="" /></span>
