--- a/testsgr.html
+++ b/testsgr.html
@@ -34,9 +34,12 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Gravitational Wave Tests of General Relativity</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<span class="image fit"><img src="images/binaryBHs.jpg" alt="" /></span>
+							<p>Gravitational wave signals from merging binary black holes can be used to test the nature of gravity and of the black holes themselves.</p>
+							<p>We have some reasons to think that physical gravity should deviate from the predictions of General Relativity. General Relativity is not renormalizable, it requires the inclusion of infinitely many higher order terms in gravitational curvature to be quantizable. This gives us motivation to consider other theories of gravity, including those involving some of those higher order terms in gravitational curvature. In addition, we would like to understand how closely the black holes that we observe in our universe resemble the black holes of General Relativity.</p>
+							<span class="image fit"><img src="images/GRaction.jpg" alt="" /></span>
+							<p>Gravitational waves offer us a particular window into physics where the gravitational field is very strong.</p>
+							<p>Making flexible and theory agnostic tests of General Relativity is difficult. We would like to test for theories that we haven't thought to write down as well as those we have. Flexible tests will also pick up inadequacies in our models, as well as any potential physics beyond General Relativity.</p>
 						</div>
 					</section>
 
