--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
-							<a href="mailto:tmay@perimeterinstitute.ca">tmay@perimeterinstitute.ca</a>
+							<a href="mailto:taillte.may@tecnico.ulisboa.pt">Email</a>
 						</div>
 					</section>
 
