--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Contact</h2>
-							<a href="mailto:taillte.may@tecnico.ulisboa.pt">Email</a>
+							<h2><a href="mailto:taillte.may@tecnico.ulisboa.pt">Contact</a></h2>
 						</div>
 					</section>
 
