--- a/index.html
+++ b/index.html
@@ -98,13 +98,8 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Links</h2>
-							<p>Below are relevant links to talks and publication details.</p>
+							<p>Below are relevant links including recorded talks and publication details.</p>
 							<div class="features">
-								<section>
-									<!--<span class="icon solid major fa-code"></span>-->
-									<h3>Curriculim Vitae</h3>
-									<p><a href="CV.pdf" target="_blank">Click here</a></li>, last updated 18th Oct 2025</p>
-								</section>
 								<section>
 									<!--<span class="icon solid major fa-lock"></span>-->
 									<h3>Paper Summaries</h3>
@@ -115,6 +110,11 @@
 									<h3>Talks</h3>
 									<p><a href="https://pirsa.org/24100138">Black Hole Ringdown Nonlinearities</a>, Perimeter Institute, 21st Oct 2024</p>
 								</section>
+								<section>
+                                                                        <!--<span class="icon solid major fa-code"></span>-->
+                                                                        <h3>Curriculim Vitae</h3>
+                                                                        <p><a href="CV.pdf" target="_blank">Click here</a></li>, last updated 18th Oct 2025</p>
+                                                                </section>
 							</div>
 						</div>
 					</section>
